# AlcheMark

./: .gitignore  README.md  pyproject.toml
alchemark_ai/: __init__.py
alchemark_ai/formatter/: formatter_md.py
alchemark_ai/pdf2md/: pdf2md.py
examples/: basic_usage.py
tests/: test_pdf2md.py
validation/: comprehensive_validation.py
